[imad-console] Updates ui/style.css

--- a/ui/style.css
+++ b/ui/style.css
@@ -1,19 +1,19 @@
 body {
-    font-family: sans-serif;
-    background-color: lightgrey;
+    font-family: times new roman;
+    background-color: blue;
     margin-top: 75px;
 }
 
 .center {
-    text-align: center;
+    text-align: right;
 }
 
 .text-big {
-    font-size: 300%;
+    font-size: 400%;
 }
 
 .bold {
-    font-weight: bold;
+    font-weight: 200;
 }
 
 .img-medium {
